--- a/GNN/GraphConv/Jupy-Notebook.ipynb
+++ b/GNN/GraphConv/Jupy-Notebook.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "630fe625",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#----------------------------------------------------------\n",
+    "# Section: Mount-cluster\n",
+    "import os\n",
+    "import subprocess\n",
+    "\n",
+    "# Paths\n",
+    "remote = \"/mnt/data/sur/users/mrivera\"\n",
+    "mount_p = \"/home/mriveraceron/fenix_mount\"\n",
+    "\n",
+    "# Mount only if not already mounted\n",
+    "if os.path.ismount(mount_p):\n",
+    "    print(\">> Cluster is already mounted\")\n",
+    "else:\n",
+    "    subprocess.run([\n",
+    "        'sshfs',\n",
+    "        '-o', 'ro',   # <-- read-only option\n",
+    "        f'mrivera@fenix.lavis.unam.mx:{remote}',\n",
+    "        mount_p\n",
+    "    ], capture_output=True, text=True)\n",
+    "    print(\">> Cluster mounted\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "56c1f135",
    "metadata": {},
