--- a/GNN/JupyBooks/Jupy-Notebook.ipynb
+++ b/GNN/JupyBooks/Jupy-Notebook.ipynb
@@ -33,10 +33,10 @@
     "# Define function for seeding\n",
     "def set_seed(seed=42):\n",
     "    # Set ALL seeds for full reproducibility\n",
-    "    torch.manual_seed(seed)                 # Seed CPU \n",
-    "    torch.cuda.manual_seed(seed)            # Seed GPU\n",
-    "    np.random.seed(seed)                    # Seed numpy\n",
-    "    random.seed(seed)                       # Seed python random\n",
+    "    torch.manual_seed(seed)                     # Seed CPU \n",
+    "    torch.cuda.manual_seed(seed)                # Seed GPU\n",
+    "    np.random.seed(seed)                        # Seed numpy\n",
+    "    random.seed(seed)                           # Seed python random\n",
     "    torch.backends.cudnn.deterministic = True   # Ensure deterministic behavior\n",
     "    torch.backends.cudnn.benchmark = False   \n",
     "\n",
@@ -64,9 +64,7 @@
     "\n",
     "dpath = \"/home/mriveraceron/data/4379fd40-9f0a\"\n",
     "train_path = glob.glob(f'{dpath}/TrainBatch_*.pt')\n",
-    "val_path = glob.glob(f'{dpath}/ValBatch_*.pt')\n",
-    "\n",
-    "   "
+    "val_path = glob.glob(f'{dpath}/ValBatch_*.pt')"
    ]
   },
   {
