Added extinctions distribution in Exploratory jupyter notebook

--- a/JupyBooks/Exploratory-analysis.ipynb
+++ b/JupyBooks/Exploratory-analysis.ipynb
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b89da549",
+   "id": "1efc2372",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,13 +46,13 @@
    "metadata": {},
    "source": [
     "# 20-species\n",
-    "We will be plotting extinctions distribution separated by number of species."
+    "We will be plotting extinctions distribution separated by number of species.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db791bb3",
+   "id": "74aadfb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
     "ext20, Bc20, Ks20 = par_dat(ids=d20)\n",
     "ext100, Bc100, Ks100 = par_dat(ids=d100)\n",
     "# getsizeof(ext100) / (1024 ** 2) \n",
-    "uniques = dict.fromkeys(ext100)\n",
+    "# uniques = dict.fromkeys(ext100)\n",
     "print(f\" >> The number of extinctions for 20 species is {len(ext20)} it should be 20*{len(d20)}={20 * len(d20)}\")\n"
    ]
   },
@@ -97,13 +97,13 @@
    "metadata": {},
    "source": [
     "## Extinctions distribution\n",
-    "We generate a function to compare the distribution of the number of extinctions"
+    "We generate a function to compare the distribution of the number of extinctions."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07bf7eed",
+   "id": "95e202bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,55 @@
     "ax2.set_title('Number of extinctions in 100 species data')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/plot.png', dpi = 300)  # Saves as PNG"
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/ext-pie.png', dpi = 300)  # Saves as PNG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aea52b9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Distribution of extinctions histogram\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy.stats import gaussian_kde\n",
+    "\n",
+    "# Get log-counts with 20 species\n",
+    "b1 = np.arange(0, 21, 1)\n",
+    "ct1, _ = np.histogram(ext20, bins=21)\n",
+    "ct1_log = np.log1p(ct1)  # log(count + 1) to avoid log(0)\n",
+    "mask = ct1_log > 0\n",
+    "\n",
+    "# Get log-counts with 20 species\n",
+    "b2 = np.arange(0, 101, 1)\n",
+    "ct2, _ = np.histogram(ext20, bins=101)\n",
+    "ct2_log = np.log1p(ct2)  # log(count + 1) to avoid log(0)\n",
+    "\n",
+    "# Create the plot\n",
+    "plt.clf()  # Clear the entire figure\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "\n",
+    "# Plot on first subplot\n",
+    "ax1.plot(b1, ct1_log, marker='o', linestyle='-', color='blue')\n",
+    "ax1.set_xlabel('Number of extinctions')\n",
+    "ax1.set_ylabel('log(Frequency + 1)')\n",
+    "ax1.set_title('Distribution with 20 species')\n",
+    "ax1.set_xlim(0, 20)\n",
+    "\n",
+    "# Plot on first subplot\n",
+    "ax2.plot(b2, ct2_log, marker='o', linestyle='-', color='red')\n",
+    "ax2.set_xlabel('Number of extinctions')\n",
+    "ax2.set_ylabel('log(Frequency + 1)')\n",
+    "ax2.set_title('Distribution with 100 species')\n",
+    "ax2.set_xlim(0, 100)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/exts-distr.png', dpi=300)\n",
+    "plt.close()"
    ]
   },
   {
@@ -155,35 +203,53 @@
    "id": "f54f3e1e",
    "metadata": {},
    "source": [
-    "# Correlation between variables"
+    "# Correlation between variables\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1688e504",
+   "id": "32e8ba93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ext20, Bc20, Ks20 = par_dat(ids=d20)\n",
-    "# ext100, Bc100, Ks100 = par_dat(ids=d100)\n",
+    "\n",
     "import numpy as np \n",
     "from scipy.stats import pearsonr\n",
     "\n",
-    "def correlate(var1, var2, name1, name2):\n",
+    "def correlate(var1, var2, name1, name2, specs):\n",
     "    corr, pvalue = pearsonr(var1, var2)\n",
     "    if pvalue <= 0.05:\n",
-    "        direction = \"positively\" if corr > 0 else \"negatively\"\n",
-    "        print(f'>> {name1} is {direction} correlated with {name2}')\n",
-    "        print(f'   r = {corr:.3f}, p = {pvalue}')\n",
+    "        print(f'>> {name1} is correlated with {name2} with a r={corr} for {specs} species. Statistical significance of: pval={pvalue}')\n",
     "    else:\n",
-    "        print(f'>> {name1} is NOT significantly correlated with {name2}')\n",
-    "        print(f'   r = {corr:.3f}, p = {pvalue} (not significant)')\n",
+    "        print(f'>> {name1} is NOT correlated with {name2} with a r={corr}. Statistical significance of: pval={pvalue}')\n",
     "\n",
-    "# Run analyses\n",
-    "correlate(ext20, Bc20, \"Extinctions\", \"Bray-Curtis\")\n",
-    "correlate(ext20, Ks20, \"Extinctions\", \"Keystoneness\")\n",
-    "correlate(Ks20, Bc20, \"Keystoneness\", \"Bray-Curtis\")\n"
+    "# Run with 20 species\n",
+    "correlate(ext20, Bc20, \"Extinctions\", \"Bray-Curtis\", 20)\n",
+    "correlate(ext20, Ks20, \"Extinctions\", \"Keystoneness\", 20)\n",
+    "correlate(Ks20, Bc20, \"Keystoneness\", \"Bray-Curtis\", 20)\n",
+    "\n",
+    "# Run with 100 species\n",
+    "correlate(ext100, Bc100, \"Extinctions\", \"Bray-Curtis\", 100)\n",
+    "correlate(ext100, Ks100, \"Extinctions\", \"Keystoneness\", 100)\n",
+    "correlate(Ks100, Bc100, \"Keystoneness\", \"Bray-Curtis\", 100)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7204002",
+   "metadata": {},
+   "source": [
+    "Run with 20 species\n",
+    "- Extinctions is correlated with Bray-Curtis with a r=0.06158719265577826 for 20 species. Statistical significance of: pval=3.869123886395461e-106\n",
+    "- Extinctions is correlated with Keystoneness with a r=0.06170291131837201 for 20 species. Statistical significance of: pval=1.5666279402111278e-106\n",
+    "- Keystoneness is correlated with Bray-Curtis with a r=0.9907854367974938 for 20 species. Statistical significance of: pval=0.0\n",
+    "\n",
+    "Run with 100 species\n",
+    "- Extinctions is correlated with Bray-Curtis with a r=0.5444984960220364 for 100 species. Statistical significance of: pval=0.0\n",
+    "- Extinctions is correlated with Keystoneness with a r=0.54385381297123 for 100 species. Statistical significance of: pval=0.0\n",
+    "- Keystoneness is correlated with Bray-Curtis with a r=0.998427694691392 for 100 species. Statistical significance of: pval=0.0"
    ]
   },
   {
@@ -191,7 +257,9 @@
    "id": "e7c4bd62",
    "metadata": {},
    "source": [
-    "# Distribution of keystoness"
+    "# Distribution of keystoness and Bray-Curtis\n",
+    "\n",
+    "To determine the optimal number of bins, we can use the Freedman–Diaconis rule. However, since the interquartile range (IQR) is equal to zero in this case, the rule cannot be applied. Therefore, we use Scott’s rule as an alternative."
    ]
   },
   {
@@ -201,9 +269,130 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q25, q75 = np.percentile(x, [25, 75])\n",
-    "bin_width = 2 * (q75 - q25) * len(x) ** (-1/3)\n",
-    "bins = round((x.max() - x.min()) / bin_width)"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Calculate optimal number of bins\n",
+    "def bin_calc(x):\n",
+    "    std = np.std(x)\n",
+    "    n = len(x)\n",
+    "    h_scott = 3.5 * std / (n ** (1/3))\n",
+    "    bins_scott = int(np.ceil((x.max() - x.min()) / h_scott))\n",
+    "    return bins_scott\n",
+    "\n",
+    "# Compute the number of bins\n",
+    "x1 = np.round(Ks20, 5)\n",
+    "bins1 = bin_calc(x1)\n",
+    "x2 = np.round(Ks100, 5)\n",
+    "bins2 = bin_calc(x2)\n",
+    "\n",
+    "# Generate the histogram for keystoness\n",
+    "plt.clf()  # Clear the entire figure\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 5))\n",
+    "ax1.hist(x1, bins=bins1, density=True, histtype='step',  color='blue', label='S20')  # 'step' draws only the outline\n",
+    "ax1.hist(x2, bins=bins2, density=True, histtype='step', color='red', label='S100')  # 'step' draws only the outline\n",
+    "ax1.set_xlabel('Keystoness')\n",
+    "ax1.set_ylabel('Frequency')\n",
+    "ax1.set_title('Keystoness distribution')\n",
+    "\n",
+    "# Compute the number of bins\n",
+    "x1 = np.round(Bc20, 5)\n",
+    "x2 = np.round(Bc100, 5)\n",
+    "bins1 = bin_calc(x1)\n",
+    "bins2 = bin_calc(x2)\n",
+    "ax2.hist(x1, bins=bins1, density=True, histtype='step',  color='blue', label='S20')  # 'step' draws only the outline\n",
+    "ax2.hist(x2, bins=bins2, density=True, histtype='step', color='red', label='S100')  # 'step' draws only the outline\n",
+    "ax2.set_xlabel('Bray-Curtis')\n",
+    "ax2.set_ylabel('Frequency')\n",
+    "ax2.set_title('Bray-Curtis distribution')\n",
+    "plt.legend()\n",
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/both-distr.png', dpi = 300)  # Saves as PNG\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7a6bfca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the number of bins using the  Freedman-Diaconis rule\n",
+    "q75, q25 = np.percentile(Ks20, [75 ,25])            # quartile\n",
+    "iqr = q75 - q25                                     # interquartile\n",
+    "n = len(Ks20)\n",
+    "h = 2 * iqr / (n ** (1/3))\n",
+    "\n",
+    "# Number of bins\n",
+    "bins = int((Ks20.max() - Ks20.min()) / h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcd90c14",
+   "metadata": {},
+   "source": [
+    "# Kernel density estimation\n",
+    "\n",
+    "We will use Kernel Density Estimation (KDE) to estimate the probability density function of our data, based on the available observations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eba9ec23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from scipy.stats import gaussian_kde\n",
+    "from scipy.stats import norm\n",
+    "from scipy.stats import binned_statistic\n",
+    "\n",
+    "def pdf_kde(x):\n",
+    "    # Divide data into bins\n",
+    "    statistic, bin_edges, bin_number = binned_statistic(x=range(len(x)), values = x, statistic='mean', bins = 1200)\n",
+    "    # Compute KDE\n",
+    "    x_range = np.linspace(0, 1, 1200)\n",
+    "    kde = gaussian_kde(statistic)\n",
+    "    # Evaluate density at those x points\n",
+    "    density = kde(x_range)\n",
+    "    # Generate plot\n",
+    "    fig = plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(statistic, density, 'r-', linewidth=2, label='KDE (smoothed density)')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True, alpha=0.3)\n",
+    "    return fig\n",
+    "\n",
+    "fig = pdf_kde(x = Ks20)\n",
+    "fig.savefig('/mnt/data/sur/users/mrivera/Plots/plot.png', dpi = 300)  # Saves as PNG\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddb45de1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normal histogram\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Compute histogram\n",
+    "counts, bin_edges = np.histogram(x, bins=bins_scott, density=True)\n",
+    "percentages = counts / counts.sum() * 100\n",
+    "# Plot as a line\n",
+    "plt.plot(bin_edges[:-1], percentages, drawstyle='steps-mid', color='blue', linewidth=2, label='Histogram line')\n",
+    "plt.xlabel('Keystoness-20-species')\n",
+    "plt.ylabel('Percentages')\n",
+    "plt.title('Probability density function')\n",
+    "plt.legend()\n",
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/plot.png', dpi = 300)  # Saves as PNG\n",
+    "plt.close()\n",
+    "plt.clf()  # Clear the entire figure"
    ]
   }
  ],
