Improved performance for data generation, changed correlation to Spearman's and added relative frequency plot

--- a/JupyBooks/Exploratory-analysis.ipynb
+++ b/JupyBooks/Exploratory-analysis.ipynb
@@ -36,17 +36,8 @@
     "\n",
     "#  Load-data\n",
     "data = pd.read_csv(data_path, sep=\"\\t\")\n",
-    "d20 = data.loc[data['n_species'] == 20]['id']\n",
-    "d100 = data.loc[data['n_species'] == 100]['id']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "668ca724",
-   "metadata": {},
-   "source": [
-    "# 20-species\n",
-    "We will be plotting extinctions distribution separated by number of species.\n"
+    "ids20 = data.loc[data['n_species'] == 20]['id']\n",
+    "ids100 = data.loc[data['n_species'] == 100]['id']"
    ]
   },
   {
@@ -59,36 +50,89 @@
     "\n",
     "import pyarrow.feather as ft\n",
     "import numpy as np\n",
-    "from multiprocessing import Pool\n",
-    "from sys import getsizeof\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "\n",
+    "TGT_DIR = '/mnt/data/sur/users/mrivera/Train-sims/4379fd40-9f0a/GNN-targets'  # Replace with actual path\n",
+    "RAW_ODES_DIR = '/mnt/data/sur/users/mrivera/Train-sims/4379fd40-9f0a/raw-ODEs'\n",
     "\n",
     "def read_data(id):\n",
-    "    x = ft.read_table(os.path.join(tgt_dir, f'tgt_{id}.feather'))\n",
-    "    ext = x['new_ext'].to_pandas()\n",
-    "    Bc = round(x['BC_diss'].to_pandas(), 5)\n",
-    "    Ks = round(x['K_s'].to_pandas(), 5)\n",
-    "    return ext, Bc, Ks\n",
+    "    # Load targets\n",
+    "    x = ft.read_table(os.path.join(TGT_DIR, f'tgt_{id}.feather'))\n",
+    "    ext = x['new_ext'].to_numpy()\n",
+    "    Bc = np.round(x['BC_diss'].to_numpy(), 5)\n",
+    "    Ks = np.round(x['K_s'].to_numpy(), 5)\n",
+    "    # Load relative frequency\n",
+    "    y = ft.read_table(os.path.join(RAW_ODES_DIR, f'O_{id}.feather'))\n",
+    "    freq = y.column(-1).to_numpy()\n",
+    "    # Calculate relative frequency \n",
+    "    freq_sum = freq.sum()\n",
+    "    rel = freq / freq_sum if freq_sum != 0 else np.zeros_like(freq)\n",
+    "    return ext, Bc, Ks, rel\n",
     "\n",
-    "# Generate function for extracting data\n",
-    "def par_dat(ids):\n",
-    "    ext, Bc, Ks = [], [], []\n",
-    "    if __name__ == '__main__':\n",
-    "        with Pool(processes=8) as pool:\n",
-    "            results = pool.map(read_data, ids)\n",
-    "        # Unpack and convert to numpy arrays\n",
-    "        ext, Bc, Ks = map(np.array, zip(*results))\n",
-    "        # Flatten/concatenate the vectors\n",
-    "        ext = np.concatenate(ext)\n",
-    "        Bc = np.concatenate(Bc)\n",
-    "        Ks = np.concatenate(Ks)\n",
-    "    return ext, Bc, Ks\n",
     "\n",
+    "def par_dat(ids, max_workers=8):\n",
+    "    with ThreadPoolExecutor(max_workers=max_workers) as executor:\n",
+    "        results = list(executor.map(read_data, ids))\n",
+    "    # Unpack and convert to numpy arrays\n",
+    "    ext, Bc, Ks, rel= map(np.array, zip(*results))\n",
+    "    # Flatten/concatenate the vectors\n",
+    "    keys = ['extinctions', 'bray_curtis', 'keystone', 'relative']\n",
+    "    data = {k: np.concatenate(v) for k, v in zip(keys, [ext, Bc, Ks, rel])}\n",
+    "    return data\n",
+    "     \n",
+    "        \n",
     "# 20 (specs)* Number of simulations with 20 species\n",
-    "ext20, Bc20, Ks20 = par_dat(ids=d20)\n",
-    "ext100, Bc100, Ks100 = par_dat(ids=d100)\n",
-    "# getsizeof(ext100) / (1024 ** 2) \n",
-    "# uniques = dict.fromkeys(ext100)\n",
-    "print(f\" >> The number of extinctions for 20 species is {len(ext20)} it should be 20*{len(d20)}={20 * len(d20)}\")\n"
+    "data20 = par_dat(ids=ids20)\n",
+    "data100 = par_dat(ids=ids100)\n",
+    "\n",
+    "# Test for lengths\n",
+    "for key, value in data100.items():\n",
+    "    print(f\"{key}: {len(value)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6ac8814",
+   "metadata": {},
+   "source": [
+    "# Relative frequencies distribution\n",
+    "\n",
+    "Generate a plot for relative frequencies distributions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086f5b38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# srun --partition=interactive --time=00:40:00 --cpus-per-task=8 --mem=20G --pty bash\n",
+    "x1 = data20['relative']\n",
+    "x2 = data100['relative']\n",
+    "\n",
+    "b1 = np.linspace(0, 1, 100)\n",
+    "ct1, _ = np.histogram(x1, bins=100)\n",
+    "ct2, _ = np.histogram(x2, bins=100)\n",
+    "\n",
+    "# Apply log\n",
+    "ct1_log = np.log1p(ct1) \n",
+    "ct2_log = np.log1p(ct2) \n",
+    "\n",
+    "# Plot distribution\n",
+    "plt.clf()  # Clear the entire figure\n",
+    "plt.figure(figsize=(12, 5))\n",
+    "plt.plot(b1, ct1_log, marker='o', linestyle='-', color='blue')\n",
+    "plt.plot(b1, ct2_log, marker='o', linestyle='-', color='red')\n",
+    "plt.xlabel('Relative frequencies')\n",
+    "plt.ylabel('log(Frequency + 1)')\n",
+    "plt.title('Distribution of relative frequencies')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/RelFreq-distr.png', dpi=300)\n",
+    "plt.close()\n"
    ]
   },
   {
@@ -151,6 +195,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "070a628c",
+   "metadata": {},
+   "source": [
+    "We generate the distribution of extinctions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "aea52b9b",
@@ -204,7 +256,32 @@
    "metadata": {},
    "source": [
     "# Correlation between variables\n",
-    "\n"
+    "\n",
+    "## Run with 20 species\n",
+    "* extinctions is correlated with bray_curtis with r=-0.02 for 20 species. Statistical significance: pval=8.17e-08\n",
+    "\n",
+    "* extinctions is correlated with keystone with r=-0.01 for 20 species. Statistical significance: pval=2.46e-07\n",
+    "\n",
+    "* extinctions is correlated with relative with r=-0.13 for 20 species. Statistical significance: pval=0.00e+00\n",
+    "\n",
+    "* bray_curtis is correlated with keystone with r=1.00 for 20 species. Statistical significance: pval=0.00e+00\n",
+    "\n",
+    "* bray_curtis is correlated with relative with r=0.08 for 20 species. Statistical significance: pval=6.66e-194\n",
+    "\n",
+    "* keystone is correlated with relative with r=0.08 for 20 species. Statistical significance: pval=1.28e-173\n",
+    "\n",
+    "## Run with 100 species\n",
+    "* extinctions is correlated with bray_curtis with r=-0.02 for 100 species. Statistical significance: pval=8.17e-08\n",
+    "\n",
+    "* extinctions is correlated with keystone with r=-0.01 for 100 species. Statistical significance: pval=2.46e-07\n",
+    "\n",
+    "* extinctions is correlated with relative with r=-0.13 for 100 species. Statistical significance: pval=0.00e+00\n",
+    "\n",
+    "* bray_curtis is correlated with keystone with r=1.00 for 100 species. Statistical significance: pval=0.00e+00\n",
+    "\n",
+    "* bray_curtis is correlated with relative with r=0.08 for 100 species. Statistical significance: pval=6.66e-194\n",
+    "\n",
+    "* keystone is correlated with relative with r=0.08 for 100 species. Statistical significance: pval=1.28e-173"
    ]
   },
   {
@@ -216,40 +293,45 @@
    "source": [
     "\n",
     "import numpy as np \n",
-    "from scipy.stats import pearsonr\n",
+    "# from scipy.stats import pearsonr\n",
+    "from scipy.stats import spearmanr\n",
+    "import itertools\n",
     "\n",
     "def correlate(var1, var2, name1, name2, specs):\n",
-    "    corr, pvalue = pearsonr(var1, var2)\n",
-    "    if pvalue <= 0.05:\n",
-    "        print(f'>> {name1} is correlated with {name2} with a r={corr} for {specs} species. Statistical significance of: pval={pvalue}')\n",
-    "    else:\n",
-    "        print(f'>> {name1} is NOT correlated with {name2} with a r={corr}. Statistical significance of: pval={pvalue}')\n",
+    "    corr, pvalue = spearmanr(var1, var2)\n",
+    "    print(f'>> {name1} is correlated with {name2} with r={corr:.2f} '\n",
+    "          f'for {specs} species. Statistical significance: pval={pvalue:.2e}\\n')\n",
     "\n",
-    "# Run with 20 species\n",
-    "correlate(ext20, Bc20, \"Extinctions\", \"Bray-Curtis\", 20)\n",
-    "correlate(ext20, Ks20, \"Extinctions\", \"Keystoneness\", 20)\n",
-    "correlate(Ks20, Bc20, \"Keystoneness\", \"Bray-Curtis\", 20)\n",
+    "def run_correlation_suite(data, n_species):\n",
+    "    keys = ['extinctions', 'bray_curtis', 'keystone', 'relative']\n",
+    "    pairs = list(itertools.combinations(keys, 2))           # Generate combinations\n",
+    "    for p in pairs:\n",
+    "        name1, name2 = p[0], p[1]                           # Variable names\n",
+    "        var1, var2 = data20[p[0]], data20[p[1]]             # Data\n",
+    "        correlate(var1, var2, name1, name2, n_species)\n",
     "\n",
-    "# Run with 100 species\n",
-    "correlate(ext100, Bc100, \"Extinctions\", \"Bray-Curtis\", 100)\n",
-    "correlate(ext100, Ks100, \"Extinctions\", \"Keystoneness\", 100)\n",
-    "correlate(Ks100, Bc100, \"Keystoneness\", \"Bray-Curtis\", 100)\n"
+    "# Run correlation analyses\n",
+    "run_correlation_suite(data20, 20)\n",
+    "run_correlation_suite(data100, 100)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e7204002",
+   "id": "9b52a0aa",
    "metadata": {},
    "source": [
-    "Run with 20 species\n",
-    "- Extinctions is correlated with Bray-Curtis with a r=0.06158719265577826 for 20 species. Statistical significance of: pval=3.869123886395461e-106\n",
-    "- Extinctions is correlated with Keystoneness with a r=0.06170291131837201 for 20 species. Statistical significance of: pval=1.5666279402111278e-106\n",
-    "- Keystoneness is correlated with Bray-Curtis with a r=0.9907854367974938 for 20 species. Statistical significance of: pval=0.0\n",
-    "\n",
-    "Run with 100 species\n",
-    "- Extinctions is correlated with Bray-Curtis with a r=0.5444984960220364 for 100 species. Statistical significance of: pval=0.0\n",
-    "- Extinctions is correlated with Keystoneness with a r=0.54385381297123 for 100 species. Statistical significance of: pval=0.0\n",
-    "- Keystoneness is correlated with Bray-Curtis with a r=0.998427694691392 for 100 species. Statistical significance of: pval=0.0"
+    "## Plot correlations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "093fae49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n"
    ]
   },
   {
@@ -335,64 +417,6 @@
     "# Kernel density estimation\n",
     "\n",
     "We will use Kernel Density Estimation (KDE) to estimate the probability density function of our data, based on the available observations."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eba9ec23",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from scipy.stats import gaussian_kde\n",
-    "from scipy.stats import norm\n",
-    "from scipy.stats import binned_statistic\n",
-    "\n",
-    "def pdf_kde(x):\n",
-    "    # Divide data into bins\n",
-    "    statistic, bin_edges, bin_number = binned_statistic(x=range(len(x)), values = x, statistic='mean', bins = 1200)\n",
-    "    # Compute KDE\n",
-    "    x_range = np.linspace(0, 1, 1200)\n",
-    "    kde = gaussian_kde(statistic)\n",
-    "    # Evaluate density at those x points\n",
-    "    density = kde(x_range)\n",
-    "    # Generate plot\n",
-    "    fig = plt.figure(figsize=(10, 6))\n",
-    "    plt.plot(statistic, density, 'r-', linewidth=2, label='KDE (smoothed density)')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True, alpha=0.3)\n",
-    "    return fig\n",
-    "\n",
-    "fig = pdf_kde(x = Ks20)\n",
-    "fig.savefig('/mnt/data/sur/users/mrivera/Plots/plot.png', dpi = 300)  # Saves as PNG\n",
-    "plt.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ddb45de1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normal histogram\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Compute histogram\n",
-    "counts, bin_edges = np.histogram(x, bins=bins_scott, density=True)\n",
-    "percentages = counts / counts.sum() * 100\n",
-    "# Plot as a line\n",
-    "plt.plot(bin_edges[:-1], percentages, drawstyle='steps-mid', color='blue', linewidth=2, label='Histogram line')\n",
-    "plt.xlabel('Keystoness-20-species')\n",
-    "plt.ylabel('Percentages')\n",
-    "plt.title('Probability density function')\n",
-    "plt.legend()\n",
-    "plt.savefig('/mnt/data/sur/users/mrivera/Plots/plot.png', dpi = 300)  # Saves as PNG\n",
-    "plt.close()\n",
-    "plt.clf()  # Clear the entire figure"
    ]
   }
  ],
