--- a/JupyBooks/EDA-tgts.ipynb
+++ b/JupyBooks/EDA-tgts.ipynb
@@ -25,6 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | eval: false\n",
+    "\n",
     "# Load data\n",
     "import pandas as pd\n",
     "import os\n",
@@ -47,6 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# | eval: false\n",
     "\n",
     "import pyarrow.feather as ft\n",
     "import numpy as np\n",
@@ -107,6 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | eval: false\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -136,6 +142,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99f9280f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/RelFreq-distr.png')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "20db5beb",
    "metadata": {},
@@ -151,6 +174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | eval: false\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
@@ -209,8 +234,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Distribution of extinctions histogram\n",
+    "# | eval: false\n",
     "\n",
+    "# Distribution of extinctions histogram\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -292,6 +318,8 @@
    "outputs": [],
    "source": [
     "\n",
+    "# | eval: false\n",
+    "\n",
     "import numpy as np \n",
     "# from scipy.stats import pearsonr\n",
     "from scipy.stats import spearmanr\n",
@@ -351,6 +379,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# | eval: false\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -395,29 +425,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7a6bfca",
+   "id": "bc438f40",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Find the number of bins using the  Freedman-Diaconis rule\n",
-    "q75, q25 = np.percentile(Ks20, [75 ,25])            # quartile\n",
-    "iqr = q75 - q25                                     # interquartile\n",
-    "n = len(Ks20)\n",
-    "h = 2 * iqr / (n ** (1/3))\n",
-    "\n",
-    "# Number of bins\n",
-    "bins = int((Ks20.max() - Ks20.min()) / h)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fcd90c14",
-   "metadata": {},
-   "source": [
-    "# Kernel density estimation\n",
-    "\n",
-    "We will use Kernel Density Estimation (KDE) to estimate the probability density function of our data, based on the available observations."
-   ]
+   "source": []
   }
  ],
  "metadata": {
