--- a/JupyBooks/EDA-tgts.qmd
+++ b/JupyBooks/EDA-tgts.qmd
@@ -1,6 +1,10 @@
 ---
 title: Exploratory data analysis
-jupyter: python3
+jupyter:
+  kernelspec:
+    display_name: Python 3
+    language: python
+    name: python3
 ---
 
 
