Modified EDA-tgts jupyter notebook

--- a/JupyBooks/EDA-tgts.ipynb
+++ b/JupyBooks/EDA-tgts.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# | eval: false\n",
+    "# | eval: true\n",
     "\n",
     "# Load data\n",
     "import pandas as pd\n",
@@ -50,7 +50,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# | eval: false\n",
+    "# | eval: true\n",
     "\n",
     "import pyarrow.feather as ft\n",
     "import numpy as np\n",
@@ -87,11 +87,7 @@
     "        \n",
     "# 20 (specs)* Number of simulations with 20 species\n",
     "data20 = par_dat(ids=ids20)\n",
-    "data100 = par_dat(ids=ids100)\n",
-    "\n",
-    "# Test for lengths\n",
-    "for key, value in data100.items():\n",
-    "    print(f\"{key}: {len(value)}\")\n"
+    "data100 = par_dat(ids=ids100)\n"
    ]
   },
   {
@@ -220,6 +216,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a3c5762",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/ext-pie.png')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "070a628c",
    "metadata": {},
@@ -277,37 +290,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5138ee58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/exts-distr.png')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f54f3e1e",
    "metadata": {},
    "source": [
-    "# Correlation between variables\n",
-    "\n",
-    "## Run with 20 species\n",
-    "* extinctions is correlated with bray_curtis with r=-0.02 for 20 species. Statistical significance: pval=8.17e-08\n",
-    "\n",
-    "* extinctions is correlated with keystone with r=-0.01 for 20 species. Statistical significance: pval=2.46e-07\n",
-    "\n",
-    "* extinctions is correlated with relative with r=-0.13 for 20 species. Statistical significance: pval=0.00e+00\n",
-    "\n",
-    "* bray_curtis is correlated with keystone with r=1.00 for 20 species. Statistical significance: pval=0.00e+00\n",
-    "\n",
-    "* bray_curtis is correlated with relative with r=0.08 for 20 species. Statistical significance: pval=6.66e-194\n",
-    "\n",
-    "* keystone is correlated with relative with r=0.08 for 20 species. Statistical significance: pval=1.28e-173\n",
-    "\n",
-    "## Run with 100 species\n",
-    "* extinctions is correlated with bray_curtis with r=-0.02 for 100 species. Statistical significance: pval=8.17e-08\n",
-    "\n",
-    "* extinctions is correlated with keystone with r=-0.01 for 100 species. Statistical significance: pval=2.46e-07\n",
-    "\n",
-    "* extinctions is correlated with relative with r=-0.13 for 100 species. Statistical significance: pval=0.00e+00\n",
-    "\n",
-    "* bray_curtis is correlated with keystone with r=1.00 for 100 species. Statistical significance: pval=0.00e+00\n",
-    "\n",
-    "* bray_curtis is correlated with relative with r=0.08 for 100 species. Statistical significance: pval=6.66e-194\n",
-    "\n",
-    "* keystone is correlated with relative with r=0.08 for 100 species. Statistical significance: pval=1.28e-173"
+    "# Correlation between variables\n"
    ]
   },
   {
@@ -336,11 +340,78 @@
     "    for p in pairs:\n",
     "        name1, name2 = p[0], p[1]                           # Variable names\n",
     "        var1, var2 = data20[p[0]], data20[p[1]]             # Data\n",
-    "        correlate(var1, var2, name1, name2, n_species)\n",
-    "\n",
+    "        correlate(var1, var2, name1, name2, n_species)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0956ca8f",
+   "metadata": {},
+   "source": [
+    "## Run with 20 species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86c697cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Run correlation analyses\n",
-    "run_correlation_suite(data20, 20)\n",
-    "run_correlation_suite(data100, 100)\n"
+    "run_correlation_suite(data20, 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6218214",
+   "metadata": {},
+   "source": [
+    "## Run with 100 species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "746ba3ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run correlation analyses\n",
+    "run_correlation_suite(data100, 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2eddaea",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "* extinctions is correlated with bray_curtis with r=-0.02 for 20 species. Statistical significance: pval=8.17e-08\n",
+    "\n",
+    "* extinctions is correlated with keystone with r=-0.01 for 20 species. Statistical significance: pval=2.46e-07\n",
+    "\n",
+    "* extinctions is correlated with relative with r=-0.13 for 20 species. Statistical significance: pval=0.00e+00\n",
+    "\n",
+    "* bray_curtis is correlated with keystone with r=1.00 for 20 species. Statistical significance: pval=0.00e+00\n",
+    "\n",
+    "* bray_curtis is correlated with relative with r=0.08 for 20 species. Statistical significance: pval=6.66e-194\n",
+    "\n",
+    "* keystone is correlated with relative with r=0.08 for 20 species. Statistical significance: pval=1.28e-173\n",
+    "\n",
+    "## Run with 100 species\n",
+    "* extinctions is correlated with bray_curtis with r=-0.02 for 100 species. Statistical significance: pval=8.17e-08\n",
+    "\n",
+    "* extinctions is correlated with keystone with r=-0.01 for 100 species. Statistical significance: pval=2.46e-07\n",
+    "\n",
+    "* extinctions is correlated with relative with r=-0.13 for 100 species. Statistical significance: pval=0.00e+00\n",
+    "\n",
+    "* bray_curtis is correlated with keystone with r=1.00 for 100 species. Statistical significance: pval=0.00e+00\n",
+    "\n",
+    "* bray_curtis is correlated with relative with r=0.08 for 100 species. Statistical significance: pval=6.66e-194\n",
+    "\n",
+    "* keystone is correlated with relative with r=0.08 for 100 species. Statistical significance: pval=1.28e-173"
    ]
   },
   {
@@ -428,7 +499,16 @@
    "id": "bc438f40",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "img = mpimg.imread('/mnt/data/sur/users/mrivera/Plots/both-distr.png')\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.imshow(img)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
